tests/regression/errors/basic/type_error_25.csd
// Type error test 25
sus number drip = 25
sus text tea = "string_25"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 25:", wrong)
